# recode

./: .travis.yml  bootstrap.conf
lib/: .gitignore
m4/: .gitignore
src/: Makefile.am  iconv.c  main.c  names.c  outer.c  recodext.h  request.c  task.c  ucs.c
